# contact-searching-starter

./: README.md
.github/workflows/: build.yml
config/: gatorgrade.yml  gatorgrader.yml
contactsearcher/: pyproject.toml
contactsearcher/contactsearcher/: .pymarkdown.cfg  main.py  search.py
contactsearcher/input/: contacts.txt
writing/: reflection.md
